remove use restriction from consent